AC_INIT([PhotoSelect], [0.1], [brucekarsh@gmail.com], [PhotoSelect])
AC_CONFIG_SRCDIR([src/main.cc])
AM_INIT_AUTOMAKE
AC_PROG_CC
AC_PROG_CXX
PKG_CHECK_MODULES([PhotoSelect], [gtk+-3.0 gmodule-2.0 >= 2.0 json exiv2 libcrypto++ xerces-c])
AC_PROG_INSTALL
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
